@@ -54,7 +54,20 @@
      <item>
       <widget class="synthv1widget_preset" name="Preset" />
      </item>
-     <item>
+	 <item>
+	  <widget class="QToolButton" name="SwapParamsButton">
+	   <property name="toolTip">
+		<string>Swap A/B</string>
+	   </property>
+	   <property name="text">
+		<string>A / B</string>
+	   </property>
+	   <property name="checkable">
+		<bool>true</bool>
+	   </property>
+	  </widget>
+	 </item>
+	 <item>
       <spacer>
        <property name="orientation">
         <enum>Qt::Horizontal</enum>
